--- a/index.html
+++ b/index.html
@@ -30,35 +30,42 @@
 <ul>
 <li>L01 (Giovedì 18 Marzo 10:30-13:30) 3h
 <ul>
-<li></li>
+<li>Prediction intervals in the linear model</li>
+<li>Conformal prediction</li>
 </ul></li>
 <li>L02 (Lunedì 22 Marzo 12:30-15:30) 3h
 <ul>
-<li></li>
+<li>Split conformal prediction</li>
+<li>Multi split conformal prediction</li>
 </ul></li>
 <li>L03 (Martedì 23 Marzo 9:30-11:30) 2h
 <ul>
-<li></li>
+<li>The crisis of modern science</li>
+<li>The law of selection</li>
 </ul></li>
 <li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
-<li></li>
+<li>What can go wrong in high dimensions?</li>
+<li>Global testing in high-dimensions</li>
 </ul></li>
 <li>L05 (Lunedì 29 Marzo 12:30-15:30) 3h
 <ul>
-<li></li>
+<li>Multiple testing: FWER controlling procedures</li>
+<li>Multiple testing: FDR controlling procedures</li>
 </ul></li>
 <li>L06 (Martedì 30 Marzo 9:30-11:30) 2h
 <ul>
-<li></li>
+<li>Data-splitting for high-dimensional inference</li>
 </ul></li>
 <li>L07 (Giovedì 8 Aprile 10:30-13:30) 3h
 <ul>
-<li></li>
+<li>Stability selection</li>
+<li>Complementary Pairs Stability Selection</li>
 </ul></li>
 <li>L08 (Lunedì 12 Aprile 12:30-14:30) 3h
 <ul>
-<li></li>
+<li>The knockoff filter: Fixed-X knockoffs</li>
+<li>The knockoff filter: Model-X knockoffs</li>
 </ul></li>
 </ul>
 <p>Se non specificato, la lezione è sincrona.</p>
