--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 <p>Corso di Laurea Magistrale in Scienze Statistiche ed Economiche, Università degli Studi di Milano-Bicocca, A.A. 2020/21.</p>
 <div id="calendario-delle-lezioni-e-materiale-didattico" class="section level2">
 <h2>Calendario delle lezioni e materiale didattico</h2>
+<p>CONFORMAL INFERENCE</p>
 <ul>
 <li>L01 (Giovedì 18 Marzo 10:30-13:30) 3h
 <ul>
-<li>Prediction intervals in the linear model</li>
+<li>Prediction intervals</li>
 <li>Conformal prediction</li>
 </ul></li>
 <li>L02 (Lunedì 22 Marzo 12:30-15:30) 3h
@@ -38,6 +39,9 @@
 <li>Split conformal prediction</li>
 <li>Multi split conformal prediction</li>
 </ul></li>
+</ul>
+<p>HIGH DIMENSIONAL STATISTICS AND MULTIPLE TESTING</p>
+<ul>
 <li>L03 (Martedì 23 Marzo 9:30-11:30) 2h
 <ul>
 <li>The crisis of modern science</li>
@@ -46,16 +50,19 @@
 <li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
 <li>What can go wrong in high dimensions?</li>
-<li>Global testing in high-dimensions</li>
+<li>Global testing in high dimensions</li>
 </ul></li>
 <li>L05 (Lunedì 29 Marzo 12:30-15:30) 3h
 <ul>
 <li>Multiple testing: FWER controlling procedures</li>
 <li>Multiple testing: FDR controlling procedures</li>
 </ul></li>
+</ul>
+<p>VARIABLE SELECTION</p>
+<ul>
 <li>L06 (Martedì 30 Marzo 9:30-11:30) 2h
 <ul>
-<li>Data-splitting for high-dimensional inference</li>
+<li>Data splitting for high dimensional variable selection</li>
 </ul></li>
 <li>L07 (Giovedì 8 Aprile 10:30-13:30) 3h
 <ul>
