--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li>Multi split conformal prediction</li>
 </ul></li>
 </ul>
-<p>HIGH DIMENSIONAL STATISTICS AND MULTIPLE TESTING</p>
+<p>SELECTION, HIGH DIMENSIONAL STATISTICS AND MULTIPLE TESTING</p>
 <ul>
 <li>L03 (Martedì 23 Marzo 9:30-11:30) 2h
 <ul>
