--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <li><strong>Split conformal prediction</strong></li>
 <li><strong>Multi split conformal prediction</strong></li>
 <li><a href="https://arxiv.org/pdf/1604.04173.pdf">Lei, J., G’Sell, M., Rinaldo, A., Tibshirani, R. J., and Wasserman, L. (2018). Distribution-free predictive inference for regression. Journal of the American Statistical Association, 113:1094-1111.</a></li>
+<li><a href="https://arxiv.org/pdf/1905.03222.pdf">Romano, Y., Patterson, E., and Candes, E. J. (2019). Conformalized quantile regression. 33rd Conference on Neural Information Processing Systems</a></li>
 <li><a href="https://arxiv.org/pdf/1905.02928.pdf">Barber, R. F., Candes, E. J., Ramdas, A., and Tibshirani, R. J. (2021). Predictive inference with the jackknife+. Annals of Statistics, 49:486–507.</a></li>
 </ul></li>
 </ul>
@@ -57,7 +58,7 @@
 <li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
 <li><strong>What can go wrong in high dimensions?</strong></li>
-<li><strong>Global testing in high dimensions</strong></li>
+<li><strong>Global tests in high dimensions</strong></li>
 <li><a href>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1</a></li>
 <li><a href="http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf">Donoho D. and Jin J. (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25</a></li>
 </ul></li>
@@ -73,7 +74,7 @@
 <li>L06 (Martedì 30 Marzo 9:30-11:30) 2h
 <ul>
 <li><strong>Data splitting for high dimensional variable selection</strong></li>
-<li><a href="https://arxiv.org/pdf/1408.4026.pdf">Dezeure, R., Buhlmann, P., Meier, L., &amp; Meinshausen, N. (2015). High dimensional inference: Confidence intervals, p-values and r-software hdi. Statistical science, 533–558</a></li>
+<li><a href="https://arxiv.org/pdf/1408.4026.pdf">Dezeure, R., Buhlmann, P., Meier, L., &amp; Meinshausen, N. (2015). High dimensional inference: Confidence intervals, p-values and r-software hdi. Statistical Science, 533–558</a></li>
 </ul></li>
 <li>L07 (Giovedì 8 Aprile 10:30-13:30) 3h
 <ul>
@@ -96,10 +97,10 @@
 <h2>Esame</h2>
 <p>L’esame è composto da due parti:</p>
 <ol style="list-style-type: decimal">
-<li><p>Prova scritta (50%) che si svolgerà in corrispondenza degli appelli d’esame;</p></li>
-<li><p>Analisi dei dati (50%) da consegnare almeno una settimana prima della prova scritta.</p></li>
+<li><p>Prova scritta (peso 1/3) che si svolgerà in corrispondenza degli appelli d’esame;</p></li>
+<li><p>Analisi dei dati (peso 2/3) da consegnare almeno una settimana prima della prova scritta.</p></li>
 </ol>
-<p>Il voto finale è dato dalla media dei voti delle parti 1. e 2. Lo studente (oppure il docente) può richiedere la prova orale.</p>
+<p>Il voto finale è dato dalla media pesata dei voti delle parti 1. e 2. Lo studente (oppure il docente) può richiedere la prova orale.</p>
 <div id="analisi-dei-dati" class="section level3">
 <h3>Analisi dei dati</h3>
 <p>L’analisi dai dati prevede la consegna sulla pagina MOODLE (almeno una settimana prima della prova scritta) di un file TXT per ciascuno dei seguenti 4 data set:</p>
