--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
 <li><strong>Prediction intervals</strong></li>
 <li><strong>Conformal prediction</strong></li>
 <li><a href>Davison A.C. (2003), Statistical Models, Cambridge University Press. Section 8.3.2</a></li>
-<li><a href="https://jmlr.org/papers/volume9/shafer08a/shafer08a.pdf">Shafer, G. and Vovk, V. (2008). A tutorial on conformal prediction. Journal of Machine Learning Research, 9:371–421.</a></li>
+<li><a href="https://jmlr.org/papers/volume9/shafer08a/shafer08a.pdf">Shafer, and Vovk (2008). A tutorial on conformal prediction. Journal of Machine Learning Research, 9:371–421.</a></li>
+<li><a href="https://arxiv.org/pdf/1903.04684.pdf">Barber, Candes, Ramdas, Tibshirani (2019). The limits of distribution-free conditional predictive inference.</a></li>
 </ul></li>
 <li>L02 (Lunedì 22 Marzo 12:30-15:30) 3h
 <ul>
 <li><strong>Split conformal prediction</strong></li>
 <li><strong>Multi split conformal prediction</strong></li>
-<li><a href="https://arxiv.org/pdf/1604.04173.pdf">Lei, J., G’Sell, M., Rinaldo, A., Tibshirani, R. J., and Wasserman, L. (2018). Distribution-free predictive inference for regression. Journal of the American Statistical Association, 113:1094-1111.</a></li>
-<li><a href="https://arxiv.org/pdf/1905.03222.pdf">Romano, Y., Patterson, E., and Candes, E. J. (2019). Conformalized quantile regression. 33rd Conference on Neural Information Processing Systems</a></li>
-<li><a href="https://arxiv.org/pdf/1905.02928.pdf">Barber, R. F., Candes, E. J., Ramdas, A., and Tibshirani, R. J. (2021). Predictive inference with the jackknife+. Annals of Statistics, 49:486–507.</a></li>
+<li><a href="https://arxiv.org/pdf/1604.04173.pdf">Lei, G’Sell, Rinaldo, Tibshirani, Wasserman (2018). Distribution-free predictive inference for regression. JASA, 113:1094-1111.</a></li>
+<li><a href="https://arxiv.org/pdf/1905.03222.pdf">Romano, Patterson, Candes (2019). Conformalized quantile regression. 33rd Conference on Neural Information Processing Systems</a></li>
+<li><a href="https://arxiv.org/pdf/1905.02928.pdf">Barber, Candes, Ramdas, Tibshirani (2021). Predictive inference with the jackknife+. The Annals of Statistics, 49:486–507.</a></li>
 </ul></li>
 </ul>
 <p>SELECTION, HIGH DIMENSIONAL STATISTICS AND MULTIPLE TESTING</p>
@@ -53,20 +54,20 @@
 <li><strong>The law of selection</strong></li>
 <li><a href>Ioannidis (2005) Why most published research findings are false PLoS medicine</a></li>
 <li><a href>Goeman (2016) Randomness and the Games of Science. The Challenge of Chance, pp. 91–109, Springer</a></li>
-<li><a href="https://arxiv.org/pdf/1903.08747.pdf">Hung and Fithian (2020) Statistical methods for replicability assessment. The Annals of Applied Statistics. 14: 1063-1087</a></li>
+<li><a href="https://arxiv.org/pdf/1903.08747.pdf">Hung, Fithian (2020) Statistical methods for replicability assessment. The Annals of Applied Statistics. 14: 1063-1087</a></li>
 </ul></li>
 <li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
 <li><strong>What can go wrong in high dimensions?</strong></li>
 <li><strong>Global tests in high dimensions</strong></li>
 <li><a href>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1</a></li>
-<li><a href="http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf">Donoho D. and Jin J. (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25</a></li>
+<li><a href="http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf">Donoho, Jin (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25</a></li>
 </ul></li>
 <li>L05 (Lunedì 29 Marzo 12:30-15:30) 3h
 <ul>
 <li><strong>Multiple testing: FWER controlling procedures</strong></li>
 <li><strong>Multiple testing: FDR controlling procedures</strong></li>
-<li><a href>Goeman, J.J. and Solari, A. (2014) Multiple Hypothesis Testing in Genomics. Statistics in Medicine, 33, 1946–78</a></li>
+<li><a href>Goeman, Solari (2014) Multiple Hypothesis Testing in Genomics. Statistics in Medicine, 33, 1946–78</a></li>
 </ul></li>
 </ul>
 <p>VARIABLE SELECTION</p>
@@ -74,21 +75,21 @@
 <li>L06 (Martedì 30 Marzo 9:30-11:30) 2h
 <ul>
 <li><strong>Data splitting for high dimensional variable selection</strong></li>
-<li><a href="https://arxiv.org/pdf/1408.4026.pdf">Dezeure, R., Buhlmann, P., Meier, L., &amp; Meinshausen, N. (2015). High dimensional inference: Confidence intervals, p-values and r-software hdi. Statistical Science, 533–558</a></li>
+<li><a href="https://arxiv.org/pdf/1408.4026.pdf">Dezeure, Buhlmann, Meier, Meinshausen (2015). High dimensional inference: Confidence intervals, p-values and r-software hdi. Statistical Science, 533–558</a></li>
 </ul></li>
 <li>L07 (Giovedì 8 Aprile 10:30-13:30) 3h
 <ul>
 <li><strong>Stability selection</strong></li>
 <li><strong>Complementary Pairs Stability Selection</strong></li>
-<li><a href="https://arxiv.org/pdf/0809.2932.pdf">Meinshausen, N. and Buhlmann, P. (2010). Stability selection. JRSS-B, 72:417-473.</a></li>
-<li><a href="http://www.statslab.cam.ac.uk/~rjs57/rssb_1034.pdf">Shah, R. D. and Samworth, R. J. (2013). Variable selection with error control: another look at stability selection. JRSS-B, 75:55-80</a></li>
+<li><a href="https://arxiv.org/pdf/0809.2932.pdf">Meinshausen, Buhlmann (2010). Stability selection. JRSS-B, 72:417-473.</a></li>
+<li><a href="http://www.statslab.cam.ac.uk/~rjs57/rssb_1034.pdf">Shah, Samworth. (2013). Variable selection with error control: another look at stability selection. JRSS-B, 75:55-80</a></li>
 </ul></li>
 <li>L08 (Lunedì 12 Aprile 12:30-14:30) 3h
 <ul>
 <li><strong>The knockoff filter: Fixed-X knockoffs</strong></li>
 <li><strong>The knockoff filter: Model-X knockoffs</strong></li>
-<li><a href="https://arxiv.org/pdf/1404.5609.pdf">Barber, R. F., Candès, E. J., et al. (2015). Controlling the false discovery rate via knockoffs. The Annals of Statistics, 43, 2055–2085</a>.</li>
-<li><a href="https://arxiv.org/pdf/1602.03574.pdf">Barber, R. F., Candès, E. J., et al. (2019). A knockoff filter for highdimensional selective inference. The Annals of Statistics, 47, 2504– 2537</a></li>
+<li><a href="https://arxiv.org/pdf/1404.5609.pdf">Barber, Candès et al. (2015). Controlling the false discovery rate via knockoffs. The Annals of Statistics, 43, 2055–2085</a>.</li>
+<li><a href="https://arxiv.org/pdf/1602.03574.pdf">Barber, Candès et al. (2019). A knockoff filter for highdimensional selective inference. The Annals of Statistics, 47, 2504– 2537</a></li>
 </ul></li>
 </ul>
 <p>Se non specificato, la lezione è sincrona.</p>
