--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
 <ul>
 <li>Data set <a href="docs/data/PRED_LOW_train.txt">PRED_LOW_train</a> e <a href="docs/data/PRED_LOW_test.txt">PRED_LOW_test</a> a bassa dimensionalità</li>
 <li>Data set <a href>PRED_HIGH_train</a> e <a href>PRED_HIGH_test</a> ad elevata dimensionalità</li>
+<li><a href="docs/data/MI_dataanalysis.pdf">Criteri di valutazione</a></li>
 <li>Esempio di consegna: <a href="docs/data/2575_PRED_LOW.txt">TXT</a>, <a href="docs/data/2575_PRED_LOW.Rmd">RMD</a> e <a href="docs/data/2575_PRED_LOW.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 <li><p>Selezione delle variabili: l’obiettivo è selezionare l’insieme di variabili “rilevanti” per ciascun data set. La selezione verrà valutata in termini di True Positive Rate e False Discovery Rate.</p>
 <ul>
 <li>Data set <a href="docs/data/VS_LOW.txt">VS_LOW</a> a bassa dimensionalità</li>
 <li>Data set <a href="docs/data/VS_HIGH.txt">VS_HIGH</a> ad elevata dimensionalità</li>
+<li><a href="docs/data/MI_dataanalysis.pdf">Criteri di valutazione</a></li>
 <li>Esempio di consegna: <a href="docs/data/2575_VS_HIGH.txt">TXT</a>, <a href="docs/data/2575_VS_HIGH.Rmd">RMD</a> e <a href="docs/data/2575_VS_HIGH.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 </ul>
