--- a/index.html
+++ b/index.html
@@ -105,20 +105,19 @@
 <li><p>Intervalli di previsione: l’obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura (target: 90%) e lunghezza complessiva.</p>
 <ul>
 <li>Data set <a href="docs/data/PRED_LOW_train.txt">PRED_LOW_train</a> e <a href="docs/data/PRED_LOW_test.txt">PRED_LOW_test</a> a bassa dimensionalità</li>
-<li>Data set <a href>PRED_HIGH_train</a> e <a href>PRED_HIGH_test</a> ad elevata dimensionalità</li>
-<li><a href="docs/data/MI_dataanalysis.pdf">Criteri di valutazione</a></li>
+<li>Data set <a href="docs/data/PRED_HIGH_train.txt">PRED_HIGH_train</a> e <a href="docs/data/PRED_HIGH_test.txt">PRED_HIGH_test</a> ad elevata dimensionalità</li>
 <li>Esempio di consegna: <a href="docs/data/2575_PRED_LOW.txt">TXT</a>, <a href="docs/data/2575_PRED_LOW.Rmd">RMD</a> e <a href="docs/data/2575_PRED_LOW.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 <li><p>Selezione delle variabili: l’obiettivo è selezionare l’insieme di variabili “rilevanti” per ciascun data set. La selezione verrà valutata in termini di True Positive Rate e False Discovery Rate.</p>
 <ul>
 <li>Data set <a href="docs/data/VS_LOW.txt">VS_LOW</a> a bassa dimensionalità</li>
 <li>Data set <a href="docs/data/VS_HIGH.txt">VS_HIGH</a> ad elevata dimensionalità</li>
-<li><a href="docs/data/MI_dataanalysis.pdf">Criteri di valutazione</a></li>
 <li>Esempio di consegna: <a href="docs/data/2575_VS_HIGH.txt">TXT</a>, <a href="docs/data/2575_VS_HIGH.Rmd">RMD</a> e <a href="docs/data/2575_VS_HIGH.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 </ul>
 <p>Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file PDF contenenti il codice utilizzato (riportare solo il codice strettamente necessario che deve essere riproducibile).</p>
 <ul>
+<li><p><a href="docs/data/MI_dataanalysis.pdf">Criteri di valutazione</a>;</p></li>
 <li><p>L’analisi dei dati può essere consegnata una volta sola;</p></li>
 <li><p>Il punteggio ottenuto per l’analisi dei dati sarà valido fino a fine Febbraio 2022.</p></li>
 </ul>
