--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 <ul>
 <li><p>Intervalli di previsione: l’obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura (target: 90%) e lunghezza complessiva.</p>
 <ul>
-<li>Data set <a href="docs/data/PRED_LOW_train.txt">PRED_LOW_train</a> e <a href="docs/data/PRED_LOW_test.txt">PRED_LOW_test</a> a bassa dimensionalità</li>
-<li>Data set <a href="docs/data/PRED_HIGH_train.txt">PRED_HIGH_train</a> e <a href="docs/data/PRED_HIGH_test.txt">PRED_HIGH_test</a> ad elevata dimensionalità</li>
+<li>Data set <a href="docs/data/PRED_LOW_train.txt">PRED_LOW_train</a> e <a href="docs/data/PRED_LOW_test.txt">PRED_LOW_test</a> a bassa dimensionalità (train <span class="math inline">\(n=752\)</span>, test <span class="math inline">\(n=751\)</span> e dimensionalità <span class="math inline">\(d=5\)</span>)</li>
+<li>Data set <a href="docs/data/PRED_HIGH_train.txt">PRED_HIGH_train</a> e <a href="docs/data/PRED_HIGH_test.txt">PRED_HIGH_test</a> ad elevata dimensionalità (train <span class="math inline">\(n=100\)</span>, test <span class="math inline">\(n=10000\)</span> e dimensionalità <span class="math inline">\(d=100\)</span>)</li>
 <li>Esempio di consegna: <a href="docs/data/2575_PRED_LOW.txt">TXT</a>, <a href="docs/data/2575_PRED_LOW.Rmd">RMD</a> e <a href="docs/data/2575_PRED_LOW.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 <li><p>Selezione delle variabili: l’obiettivo è selezionare l’insieme di variabili “rilevanti” per ciascun data set. La selezione verrà valutata in termini di True Positive Rate e False Discovery Rate.</p>
 <ul>
-<li>Data set <a href="docs/data/VS_LOW.txt">VS_LOW</a> a bassa dimensionalità</li>
-<li>Data set <a href="docs/data/VS_HIGH.txt">VS_HIGH</a> ad elevata dimensionalità</li>
+<li>Data set <a href="docs/data/VS_LOW.txt">VS_LOW</a> a bassa dimensionalità (<span class="math inline">\(n=40\)</span> e <span class="math inline">\(d= 19\)</span>)</li>
+<li>Data set <a href="docs/data/VS_HIGH.txt">VS_HIGH</a> ad elevata dimensionalità (<span class="math inline">\(n=1000\)</span> e <span class="math inline">\(d= 1000\)</span>)</li>
 <li>Esempio di consegna: <a href="docs/data/2575_VS_HIGH.txt">TXT</a>, <a href="docs/data/2575_VS_HIGH.Rmd">RMD</a> e <a href="docs/data/2575_VS_HIGH.pdf">PDF</a>. E’ obbligatorio rispettare il formato richiesto.</li>
 </ul></li>
 </ul>
