--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 </ul></li>
 <li>L04 (Giovedì 25 Marzo 10:30-13:30) 3h
 <ul>
-<li><strong>What can go wrong in high dimensions?</strong></li>
-<li><strong>Global tests in high dimensions</strong></li>
-<li><a href>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1</a></li>
-<li><a href="http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf">Donoho, Jin (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25</a></li>
+<li><del><strong>What can go wrong in high dimensions?</strong></del></li>
+<li><del><strong>Global tests in high dimensions</strong></del></li>
+<li><del><a href>Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1</a></del></li>
+<li><del><a href="http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf">Donoho, Jin (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25</a></del></li>
 </ul></li>
 <li>L05 (Lunedì 29 Marzo 12:30-15:30) 3h
 <ul>
